Index page updated

--- a/starter/index.html
+++ b/starter/index.html
@@ -1,61 +1,132 @@
-<!doctype html>
+<!-- !DOCTYPE html> -->
+
 <html lang="en">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
+    <title>Sercan's Portfolio</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   </head>
   <body>
-    <h1>Hello, world!</h1>
+   <!-- nav -->
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">About Me</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Portfolio</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link disabled" aria-disabled="true">Contact Me</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+
+ <!-- hero banner -->
+
+ <section class="pageSection heroSec">
+        <div class="container-fluid heroBanner" alt="">
+            <div class="heroText">
+                <h2>WeLCoMe To My PaGe!</h2>
+            </div>
+        </div>
+    </section>
+
+
+  <!-- about me -->
+
+  <div class="jumbotron jumbotron-fluid">
+        <div class="container">
+          <h1 class="display-4">About Me</h1>
+          <p class="lead">My name is Yusuf Sercan, I have engineering background.
+                <br><br> 
+                I joined a bootcamp to be a front-end web developer.
+                <br><br>
+                This is my first webpage that I use the bootstrap components. 
+        </p>
+        </div>
+      </div>
+
+  <!-- portfolio -->
+  <div class="row">
+    <h1 class="display-4">Portfolio</h1>
+        <div class="col-sm-6">
+          <div class="card">
+            <div class="card-body">
+              <h5 class="card-title">Project1</h5>
+              <p class="card-text"></p>
+              <a href="#" class="btn btn-primary">Link for Project 1</a>
+              <img src="../starter/image/1_card.png" alt="">
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-6">
+          <div class="card">
+            <div class="card-body">
+              <h5 class="card-title">Project2</h5>
+              <p class="card-text"></p>
+              <a href="#" class="btn btn-primary">Link for Project 2</a>
+              <img src="../starter/image/2_card.png" alt="">
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-sm-6">
+          <div class="card">
+            <div class="card-body">
+              <h5 class="card-title">Project3</h5>
+              <p class="card-text"></p>
+              <a href="#" class="btn btn-primary">Link for Project 3</a>
+              <img src="../starter/image/3_card.png" alt="">
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-6">
+          <div class="card">
+            <div class="card-body">
+              <h5 class="card-title">Project4</h5>
+              <p class="card-text"></p>
+              <a href="#" class="btn btn-primary">Link for Project 4</a>
+              <img src="../starter/image/4_card.png" alt="">
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-sm-6">
+          <div class="card">
+            <div class="card-body">
+              <h5 class="card-title">Project5</h5>
+              <p class="card-text"></p>
+              <a href="#" class="btn btn-primary">Link for Project 5</a>
+              <img src="../starter/image/5_card.png" alt="">
+            </div>
+          </div>
+        </div>
+      </div>
+
+    <!-- contact me -->
+    <h5 class="display-4">Contact Me</h5>
+    <div class="card">
+        <div class="card-body">
+                <button type="button" class="btn btn-primary">Facebook<link rel="stylesheet" href="www.facebook.com"></button>
+                <button type="button" class="btn btn-secondary">Github<link rel="stylesheet" href="www.github.com"></button>
+                <button type="button" class="btn btn-success">Linkedin<link rel="stylesheet" href="www.linkedin.com"></button>            
+        </div>
+    </div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
 </body>
-<div class="row">
-    <div class="col-sm-6 mb-3 mb-sm-0">
-    <div class="card">
-      <div class="card-body">
-        <h5 class="card-title">Special title treatment</h5>
-        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-        <a href="#" class="btn btn-primary">Go somewhere</a>
-      </div>
-<div class="row">
-      <div class="col-sm-6 mb-3 mb-sm-0">
-      <div class="card">
-        <div class="card-body">
-          <h5 class="card-title">Special title treatment</h5>
-          <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
-        </div>
-      </div>
-    </div>
-      <div class="col-sm-6 mb-3 mb-sm-0">
-      <div class="card">
-        <div class="card-body">
-          <h5 class="card-title">Special title treatment</h5>
-          <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
-        </div>
-      </div>
-    </div>
-    <div class="col-sm-6 mb-3 mb-sm-0">
-      <div class="card">
-        <div class="card-body">
-          <h5 class="card-title">Special title treatment</h5>
-          <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
-        </div>
-      </div>
-    </div>
-    <div class="col-sm-6">
-      <div class="card">
-        <div class="card-body">
-          <h5 class="card-title">Special title treatment</h5>
-          <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
-        </div>
-      </div>
-    </div>
-  </div>
 </html>
