--- a/starter/index.html
+++ b/starter/index.html
@@ -11,7 +11,7 @@
    <!-- nav -->
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">About Me</a>
+          <a class="navbar-brand" href="#">YSY</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -19,6 +19,9 @@
             <ul class="navbar-nav">
               <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="#">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#">About Me</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">Portfolio</a>
@@ -59,6 +62,8 @@
   <!-- portfolio -->
   <div class="row">
     <h1 class="display-4">Portfolio</h1>
+    <br>
+    <br>
         <div class="col-sm-6">
           <div class="card">
             <div class="card-body">
@@ -116,12 +121,14 @@
       </div>
 
     <!-- contact me -->
+    <br>
+    <br>
     <h5 class="display-4">Contact Me</h5>
     <div class="card">
         <div class="card-body">
-                <button type="button" class="btn btn-primary">Facebook<link rel="stylesheet" href="www.facebook.com"></button>
-                <button type="button" class="btn btn-secondary">Github<link rel="stylesheet" href="www.github.com"></button>
-                <button type="button" class="btn btn-success">Linkedin<link rel="stylesheet" href="www.linkedin.com"></button>            
+                <button type="button" class="btn btn-facebook">Facebook<link rel="stylesheet" href="www.facebook.com"></button>
+                <button type="button" class="btn btn-github">Github<link rel="stylesheet" href="www.github.com"></button>
+                <button type="button" class="btn btn-linkedin">Linkedin<link rel="stylesheet" href="www.linkedin.com"></button>            
         </div>
     </div>
 
