--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Sercan's Portfolio</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="stylesheet" href="../starter/css/style.css">
   </head>
   <body>
    <!-- nav -->
@@ -36,6 +37,13 @@
 
  <!-- hero banner -->
 
+
+
+
+  <!-- about me -->
+
+  <div class="jumbotron jumbotron-fluid">
+
  <section class="pageSection heroSec">
         <div class="container-fluid heroBanner" alt="">
             <div class="heroText">
@@ -44,10 +52,6 @@
         </div>
     </section>
 
-
-  <!-- about me -->
-
-  <div class="jumbotron jumbotron-fluid">
         <div class="container">
           <h1 class="display-4">About Me</h1>
           <p class="lead">My name is Yusuf Sercan, I have engineering background.
