image location has been changed

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
               <h5 class="card-title">Project1</h5>
               <p class="card-text"></p>
               <a href="#" class="btn btn-primary">Link for Project 1</a>
-              <img src="../starter/image/1_card.png" alt="">
+              <img src="./image/1_card.png" alt="">
             </div>
           </div>
         </div>
@@ -84,7 +84,7 @@
               <h5 class="card-title">Project2</h5>
               <p class="card-text"></p>
               <a href="#" class="btn btn-primary">Link for Project 2</a>
-              <img src="../starter/image/2_card.png" alt="">
+              <img src="./image/2_card.png" alt="">
             </div>
           </div>
         </div>
@@ -96,7 +96,7 @@
               <h5 class="card-title">Project3</h5>
               <p class="card-text"></p>
               <a href="#" class="btn btn-primary">Link for Project 3</a>
-              <img src="../starter/image/3_card.png" alt="">
+              <img src="./image/3_card.png" alt="">
             </div>
           </div>
         </div>
@@ -106,7 +106,7 @@
               <h5 class="card-title">Project4</h5>
               <p class="card-text"></p>
               <a href="#" class="btn btn-primary">Link for Project 4</a>
-              <img src="../starter/image/4_card.png" alt="">
+              <img src="./image/4_card.png" alt="">
             </div>
           </div>
         </div>
@@ -118,7 +118,7 @@
               <h5 class="card-title">Project5</h5>
               <p class="card-text"></p>
               <a href="#" class="btn btn-primary">Link for Project 5</a>
-              <img src="../starter/image/5_card.png" alt="">
+              <img src="./image/5_card.png" alt="">
             </div>
           </div>
         </div>
