--- a/index.html
+++ b/index.html
@@ -6,35 +6,46 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Sercan's Portfolio</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link rel="stylesheet" href="../starter/css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
   </head>
   <body>
    <!-- nav -->
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#">YSY</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">About Me</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Portfolio</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link disabled" aria-disabled="true">Contact Me</a>
-              </li>
+   <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">YSY</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="#">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">About Me</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              Portfolio
+            </a>
+            <ul class="dropdown-menu">
+              <li><a class="dropdown-item" href="#">Home</a></li>
+              <li><a class="dropdown-item" href="#">About Me</a></li>
+              <li><hr class="dropdown-divider"></li>
+              <li><a class="dropdown-item" href="#">Portfolio</a></li>
             </ul>
-          </div>
-        </div>
-      </nav>
-
+          </li>
+          <li class="nav-item">
+            <a class="nav-link disabled" aria-disabled="true">Contact Me</a>
+          </li>
+        </ul>
+        <form class="d-flex" role="search">
+          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+          <button class="btn btn-outline-success" type="submit">Search</button>
+        </form>
+      </div>
+    </div>
+  </nav>
  <!-- hero banner -->
 
 
@@ -68,58 +79,58 @@
     <h1 class="display-4">Portfolio</h1>
     <br>
     <br>
-        <div class="col-sm-6">
-          <div class="card">
+        <div class="col-sm-5 pb-5">
+          <div class="card" style="width: 600px">
             <div class="card-body">
               <h5 class="card-title">Project1</h5>
               <p class="card-text"></p>
               <a href="#" class="btn btn-primary">Link for Project 1</a>
-              <img src="./image/1_card.png" alt="">
             </div>
+            <img src="./image/1_card.png" alt="" style="width: 600px" />
           </div>
         </div>
-        <div class="col-sm-6">
-          <div class="card">
+        <div class="col-sm-5 pb-5">
+          <div class="card" style="width: 600px">
             <div class="card-body">
               <h5 class="card-title">Project2</h5>
               <p class="card-text"></p>
               <a href="#" class="btn btn-primary">Link for Project 2</a>
-              <img src="./image/2_card.png" alt="">
             </div>
+            <img src="./image/2_card.png" alt="" style="width: 600px" />
           </div>
         </div>
       </div>
       <div class="row">
-        <div class="col-sm-6">
-          <div class="card">
+        <div class="col-sm-5  pb-5">
+          <div class="card" style="width: 600px">
             <div class="card-body">
               <h5 class="card-title">Project3</h5>
               <p class="card-text"></p>
               <a href="#" class="btn btn-primary">Link for Project 3</a>
-              <img src="./image/3_card.png" alt="">
             </div>
+            <img src="./image/3_card.png" alt="" style="width: 600px" />
           </div>
         </div>
-        <div class="col-sm-6">
-          <div class="card">
+        <div class="col-sm-5  pb-5">
+          <div class="card" style="width: 600px">
             <div class="card-body">
               <h5 class="card-title">Project4</h5>
               <p class="card-text"></p>
               <a href="#" class="btn btn-primary">Link for Project 4</a>
-              <img src="./image/4_card.png" alt="">
             </div>
+            <img src="./image/4_card.png" alt="" style="width: 600px" />
           </div>
         </div>
       </div>
       <div class="row">
-        <div class="col-sm-6">
-          <div class="card">
+        <div class="col-sm-6  pb-5">
+          <div class="card" style="width: 600px">
             <div class="card-body">
               <h5 class="card-title">Project5</h5>
               <p class="card-text"></p>
               <a href="#" class="btn btn-primary">Link for Project 5</a>
-              <img src="./image/5_card.png" alt="">
             </div>
+            <img src="./image/5_card.png" alt="" style="width: 600px" />
           </div>
         </div>
       </div>
