bootstrap hover has been added

--- a/index.html
+++ b/index.html
@@ -25,14 +25,12 @@
             <a class="nav-link" href="#">About Me</a>
           </li>
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Portfolio
-            </a>
+            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Work</a>
             <ul class="dropdown-menu">
               <li><a class="dropdown-item" href="#">Home</a></li>
               <li><a class="dropdown-item" href="#">About Me</a></li>
               <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="#">Portfolio</a></li>
+              <li><a class="dropdown-item" href="#">Work</a></li>
             </ul>
           </li>
           <li class="nav-item">
@@ -71,12 +69,15 @@
                 <br><br>
                 This is my first webpage that I use the bootstrap components. 
         </p>
+        <div class="portrait-section col-sm-20 col-xl-26" style="height: 200px;">
+          <img class="portrait" src="./image/Sercan Foto.JPG" alt="portrait photo">
         </div>
+      </div>
       </div>
 
   <!-- portfolio -->
   <div class="row">
-    <h1 class="display-4">Portfolio</h1>
+    <h1 class="display-4">Work</h1>
     <br>
     <br>
         <div class="col-sm-5 pb-5">
@@ -134,19 +135,37 @@
           </div>
         </div>
       </div>
+    <!-- Skills -->
 
-    <!-- contact me -->
+    <h5 class="display-4">Skills</h5>
+    <ul>
+      <li>Proficiency in HTML
+      <li>Proficiency in CSS
+      <li>Proficiency in JavaScript
+      <li>Knowledge of front end frameworks such as React
+    </ul>
+    <!-- contact me // footer -->
     <br>
     <br>
-    <h5 class="display-4">Contact Me</h5>
-    <div class="card">
-        <div class="card-body">
-                <button type="button" class="btn btn-facebook">Facebook<link rel="stylesheet" href="www.facebook.com"></button>
-                <button type="button" class="btn btn-github">Github<link rel="stylesheet" href="www.github.com"></button>
-                <button type="button" class="btn btn-linkedin">Linkedin<link rel="stylesheet" href="www.linkedin.com"></button>            
+<footer>
+  <div class="row">
+    <h1 class="display-4">Contact Me</h1>
+    <br>
+    <br>
+    <a class="icon-link icon-link-hover" style="--bs-icon-link-transform: translate3d(0, -.125rem, 0);" href="#">
+    <svg class="bi" aria-hidden="true"><use xlink:href="#clipboard"></use></svg>Facebook</a>
+    <a class="icon-link icon-link-hover" style="--bs-icon-link-transform: translate3d(0, -.125rem, 0);" href="#">
+      <svg class="bi" aria-hidden="true"><use xlink:href="#clipboard"></use></svg>Instagram</a>
+      <a class="icon-link icon-link-hover" style="--bs-icon-link-transform: translate3d(0, -.125rem, 0);" href="#">
+        <svg class="bi" aria-hidden="true"><use xlink:href="#clipboard"></use></svg>Github</a>
+       <div class="col-md-6">
+          <div class="col-md-3">
+              <p><strong>Email:</strong> INFO.INFO@XXXXX.com</p>
+              <p><strong>Phone:</strong> (555)555-5555</p>
+          </div>
         </div>
-    </div>
-
+  </div>
+</footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
