Nav-links has been fixed

--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     <link rel="stylesheet" href="./css/style.css">
   </head>
   <body>
-   <!-- nav -->
    <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">YSY</a>
@@ -19,22 +18,22 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
+            <a class="nav-link active" aria-current="page" href="#Home">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">About Me</a>
+            <a class="nav-link" href="#About-Me">About Me</a>
           </li>
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Work</a>
+            <a class="nav-link dropdown-toggle" href="#Work" role="button" data-bs-toggle="dropdown" aria-expanded="false">Work</a>
             <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#">Home</a></li>
-              <li><a class="dropdown-item" href="#">About Me</a></li>
+              <li><a class="dropdown-item" href="#Home">Home</a></li>
+              <li><a class="dropdown-item" href="#About-Me">About Me</a></li>
               <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="#">Work</a></li>
+              <li><a class="dropdown-item" href="#Work">Work</a></li>
             </ul>
           </li>
           <li class="nav-item">
-            <a class="nav-link disabled" aria-disabled="true">Contact Me</a>
+            <a class="nav-link" href="#Contact-Me" aria-contactMe="true">Contact Me</a>
           </li>
         </ul>
         <form class="d-flex" role="search">
@@ -44,13 +43,6 @@
       </div>
     </div>
   </nav>
- <!-- hero banner -->
-
-
-
-
-  <!-- about me -->
-
   <div class="jumbotron jumbotron-fluid">
 
  <section class="pageSection heroSec">
@@ -75,7 +67,6 @@
       </div>
       </div>
 
-  <!-- portfolio -->
   <div class="row">
     <h1 class="display-4">Work</h1>
     <br>
@@ -135,7 +126,6 @@
           </div>
         </div>
       </div>
-    <!-- Skills -->
 
     <h5 class="display-4">Skills</h5>
     <ul>
@@ -144,7 +134,7 @@
       <li>Proficiency in JavaScript
       <li>Knowledge of front end frameworks such as React
     </ul>
-    <!-- contact me // footer -->
+
     <br>
     <br>
 <footer>
