Navigation links fixed

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <a class="nav-link" href="#About-Me">About Me</a>
           </li>
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#Work" role="button" data-bs-toggle="dropdown" aria-expanded="false">Work</a>
+            <a class="nav-link active" aria-current="page" href="#Work" >Work</a>
             <ul class="dropdown-menu">
               <li><a class="dropdown-item" href="#Home">Home</a></li>
               <li><a class="dropdown-item" href="#About-Me">About Me</a></li>
@@ -33,7 +33,7 @@
             </ul>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#Contact-Me" aria-contactMe="true">Contact Me</a>
+            <a class="nav-link active" aria-current="page" href="#Contact-Me" >Contact Me</a>
           </li>
         </ul>
         <form class="d-flex" role="search">
@@ -53,7 +53,7 @@
         </div>
     </section>
 
-        <div class="container">
+        <div class="container" id="About-Me">
           <h1 class="display-4">About Me</h1>
           <p class="lead">My name is Yusuf Sercan, I have engineering background.
                 <br><br> 
@@ -67,7 +67,7 @@
       </div>
       </div>
 
-  <div class="row">
+  <div class="row" id="Work">
     <h1 class="display-4">Work</h1>
     <br>
     <br>
@@ -138,7 +138,7 @@
     <br>
     <br>
 <footer>
-  <div class="row">
+  <div class="row" id="Contact-Me">
     <h1 class="display-4">Contact Me</h1>
     <br>
     <br>
